--- a/index.html
+++ b/index.html
@@ -1033,24 +1033,24 @@
                     </figure>
                 </section>
 
-                <section class="contact-form">
+               <section class="contact-form">
 
                     <h3 class="h3 form-title">Contact Form</h3>
 
-                    <form id="contact-form" class="form" data-form>
+                    <form id="contact-form"  class="form" data-form>
 
                         <div class="input-wrapper">
-                            <input type="text" name="fullname" class="form-input" placeholder="Full name" required
-                                data-form-input>
+                            <input type="text" name="fullname" class="form-input" id="name" placeholder="Full name"
+                                required data-form-input>
 
-                            <input type="email" name="email" class="form-input" placeholder="Email address" required
-                                data-form-input>
+                            <input type="email" name="email" class="form-input" id="email" placeholder="Email address"
+                                required data-form-input>
                         </div>
 
-                        <textarea name="message" class="form-input" placeholder="Your Message" required
+                        <textarea name="message" class="form-input" id="message" placeholder="Your Message" required
                             data-form-input></textarea>
 
-                        <button class="form-btn" type="submit" disabled data-form-btn>
+                        <button class="form-btn" type="button" onclick="sendEmail()" disabled data-form-btn>
                             <ion-icon name="paper-plane"></ion-icon>
                             <span>Send Message</span>
                         </button>
@@ -1058,7 +1058,6 @@
                     </form>
 
                 </section>
-
             </article>
 
         </div>
