--- a/index.html
+++ b/index.html
@@ -199,25 +199,23 @@
                 </header>
 
                 <section class="about-text">
-                    <p>
-                        Hi I am a Front-End developer & I can build your website as you want. I can customize plugin &
-                        wordpress theme. And I have two years of experience in figma. Now I am able to design your
-                        portfolio.
+                     <p>Hello 👋</p>
+                        <p> I am Bharat Zalavadiya, a creative web designer and developer with 1+ years of
+                        experience in web development. I have developed strong proficiency in WordPress and WooCommerce
+                        Development. I manage website maintenance, ensuring sites remain functional, secure, and
+                        up-to-date. My skills include creating and designing ecommerce websites using HTML5, CSS, and
+                        Bootstrap, ensuring a seamless user experience and responsive design.</p>
 
-                        I have three years of experience with HTML, CSS, JavaScript. And I can Design Your web
-                        application.
-                    </p>
-
-                    <p>
-                        My job is to build your website so that it is functional and user-friendly but at the same time
-                        attractive.
-                        Moreover, I
-                        add personal touch to your product and make sure that is eye-catching and easy to use. My aim is
-                        to bring
-                        across your
-                        message and identity in the most creative way. I created web design for many famous brand
-                        companies.
-                    </p>
+                    <p>I deliver high-quality web design and graphic design services to clients, creating visually
+                        appealing and functional websites that meet client needs and exceed their expectations.</p>
+                    <p>In addition to my technical skills, I am a strong communicator and team player, able to
+                        collaborate effectively with clients and colleagues to bring projects from concept to
+                        completion. My problem-solving mindset allows me to address challenges efficiently, ensuring
+                        timely delivery of projects.</p>
+                    <p>I am committed to continuous learning and staying updated with the latest industry trends and
+                        technologies to provide innovative solutions that drive business growth. My goal is to leverage
+                        my skills and experience in web development and design to deliver exceptional results and
+                        contribute to the success of your team.</p>
                 </section>
 
 
