--- a/index.html
+++ b/index.html
@@ -201,10 +201,9 @@
                 <section class="about-text">
                      <p>Hello 👋</p>
                         <p> I am Bharat Zalavadiya, a creative web designer and developer with 1+ years of
-                        experience in web development. I have developed strong proficiency in WordPress and WooCommerce
-                        Development. I manage website maintenance, ensuring sites remain functional, secure, and
-                        up-to-date. My skills include creating and designing ecommerce websites using HTML5, CSS, and
-                        Bootstrap, ensuring a seamless user experience and responsive design.</p>
+                        experience in web development. I have developed strong proficiency in WordPress Development. I manage website maintenance, ensuring sites remain functional, secure, and
+                        up-to-date. My skills include creating and designing ecommerce websites using HTML5, CSS,
+                        Bootstrap, JavaScript, WordPress ensuring a seamless user experience and responsive design.</p>
 
                     <p>I deliver high-quality web design and graphic design services to clients, creating visually
                         appealing and functional websites that meet client needs and exceed their expectations.</p>
@@ -359,8 +358,7 @@
                                     a strong entrepreneurial mindset.</li>
                                 <li class="timeline-text">Proficient in frontend technologies such as HTML, CSS,
                                     JavaScript, and frameworks like jQuery and Sass.</li>
-                                <li class="timeline-text">Experienced in WordPress development, including custom theme
-                                    and plugin development.</li>
+                                <li class="timeline-text">Experienced in WordPress development, including custom theme development.</li>
                                 <li class="timeline-text">Skilled in UI/UX design using tools like Figma.</li>
                                 <li class="timeline-text">Demonstrated ability to create responsive and user-friendly
                                     web designs.</li>
