--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
                         <textarea name="message" class="form-input" id="message" placeholder="Your Message" required
                             data-form-input></textarea>
 
-                        <button class="form-btn" type="button" onclick="sendEmail()" disabled data-form-btn>
+                        <button class="form-btn" type="button" onclick="sendToWhatsApp()" disabled data-form-btn>
                             <ion-icon name="paper-plane"></ion-icon>
                             <span>Send Message</span>
                         </button>
