--- a/index.html
+++ b/index.html
@@ -2,6 +2,39 @@
 <html lang="en">
 
 <head>
+    <!-- Meta Title -->
+<meta name="title" content="Freelance Web Designer & Developer | WordPress Expert - Bharat Zalavadiya">
+<!-- Meta Description -->
+<meta name="description" content="Bharat Zalavadiya is a professional web designer and developer with expertise in WordPress, Shopify, and creative design. Specializing in responsive web design, front-end development, and delivering high-quality digital solutions for businesses.">
+<!-- Meta Keywords -->
+<meta name="keywords" content="Freelance Web Designer, Web Developer, WordPress Developer, Shopify Expert, Front-End Developer, Creative Designer, Responsive Web Design, Web Developer India, Freelance Developer India, WordPress Designer, Bharat Zalavadiya">
+<!-- Meta Robots -->
+<meta name="robots" content="index, follow">
+<!-- OG Title -->
+<meta property="og:title" content="Freelance Web Designer & Developer | WordPress Expert - Bharat Zalavadiya">
+<!-- OG Description -->
+<meta property="og:description" content="Explore the portfolio of Bharat Zalavadiya, a skilled freelance web designer and developer. Offering professional web design, front-end development, and digital solutions to build responsive and innovative websites.">
+<!-- OG URL -->
+<meta property="og:url" content="https://bharat1005.github.io/BharatZalavadiya/">
+<!-- OG Type -->
+<meta property="og:type" content="website">
+<!-- OG Image -->
+<meta property="og:image" content="https://your-image-link.com/portfolio-image.jpg"> <!-- Replace with your actual image URL -->
+<!-- OG Site Name -->
+<meta property="og:site_name" content="Bharat Zalavadiya - Freelance Web Designer & Developer">
+<!-- OG Locale -->
+<meta property="og:locale" content="en_US">
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<!-- Twitter Title -->
+<meta name="twitter:title" content="Freelance Web Designer & Developer | WordPress Expert - Bharat Zalavadiya">
+<!-- Twitter Description -->
+<meta name="twitter:description" content="Bharat Zalavadiya is a professional web designer and developer with a focus on responsive design, WordPress, and front-end development. Check out the portfolio for more details.">
+<!-- Twitter Image -->
+<meta name="twitter:image" content="https://your-image-link.com/portfolio-image.jpg"> <!-- Replace with your actual image URL -->
+<!-- Twitter URL -->
+<meta name="twitter:url" content="https://bharat1005.github.io/BharatZalavadiya/">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bharat</title>
