--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- OG Type -->
 <meta property="og:type" content="website">
 <!-- OG Image -->
-<meta property="og:image" content="https://your-image-link.com/portfolio-image.jpg"> <!-- Replace with your actual image URL -->
+<meta property="og:image" content="	https://bharat1005.github.io/BharatZalavadiya/img//my-avatar.png"> <!-- Replace with your actual image URL -->
 <!-- OG Site Name -->
 <meta property="og:site_name" content="Bharat Zalavadiya - Freelance Web Designer & Developer">
 <!-- OG Locale -->
@@ -31,7 +31,7 @@
 <!-- Twitter Description -->
 <meta name="twitter:description" content="Bharat Zalavadiya is a professional web designer and developer with a focus on responsive design, WordPress, and front-end development. Check out the portfolio for more details.">
 <!-- Twitter Image -->
-<meta name="twitter:image" content="https://your-image-link.com/portfolio-image.jpg"> <!-- Replace with your actual image URL -->
+<meta name="twitter:image" content="	https://bharat1005.github.io/BharatZalavadiya/img//my-avatar.png"> <!-- Replace with your actual image URL -->
 <!-- Twitter URL -->
 <meta name="twitter:url" content="https://bharat1005.github.io/BharatZalavadiya/">
 
