--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 <meta name="twitter:image" content="	https://bharat1005.github.io/BharatZalavadiya/img//my-avatar.png"> <!-- Replace with your actual image URL -->
 <!-- Twitter URL -->
 <meta name="twitter:url" content="https://bharat1005.github.io/BharatZalavadiya/">
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7MCQ4BKWWT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7MCQ4BKWWT');
+</script>
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
