--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!--
           - #SIDEBAR
         -->
-
+        <img  src="./img/Bharat.jpg "  style="display:none;" >
         <aside class="sidebar" data-sidebar>
 
             <div class="sidebar-info">
