--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <!--
           - #SIDEBAR
         -->
-        <img  src="./img/Bharat.jpg "  style="display:none;" >
+        <img src="https://bharat1005.github.io/BharatZalavadiya/img/Bharat.jpg" style="display: none;">
+<!--         <img  src="./img/Bharat.jpg "  style="display:none;" > -->
         <aside class="sidebar" data-sidebar>
 
             <div class="sidebar-info">
