--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
         <!--
           - #SIDEBAR
         -->
-        <img src="https://bharat1005.github.io/BharatZalavadiya/img/bharat.jpg" style="display: none;">
+       
 <!--         <img  src="./img/Bharat.jpg "  style="display:none;" > -->
         <aside class="sidebar" data-sidebar>
 
             <div class="sidebar-info">
 
                 <figure class="avatar-box">
+                     <img src="./img/bharat.jpg"  alt="bharat" style="display: none;">
                     <img src="./img//my-avatar.png" alt="Richard hanrick" width="80">
                 </figure>
 
