--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="sidebar-info">
 
                 <figure class="avatar-box">
-                     <img src="./img//bharat.jpg"  alt="bharat" >
+<!--                      <img src="./img//bharat.jpg"  alt="bharat" > -->
                     <img src="./img//my-avatar.png" alt="Richard hanrick" width="80">
                 </figure>
 
